--- a/index.css
+++ b/index.css
@@ -58,10 +58,22 @@ nav{
     font-weight: bold;
     color: black;
 }
+
+
+style>
+    * {
+            margin: 0px 5%;
+            display: grid;
+            min-height: 500px
+            height:40vh;
+
+          }
+    }
+ 
 .text-conatiner p:nth-child(1){
       font-family: Arial, Helvetica, sans-serif;
       font-weight:bold;
-      color:#000000;
+      color:#DBE8E8;
       font-size:22px;
  }
 .text-conatinter p:nth-child(2){
@@ -90,3 +102,300 @@ nav{
 
 
 }
+
+</style>
+
+.custom-shape-divider-bottom-1615259255 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1615259255 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 123px;
+    color: #50E3C2;
+}
+
+.custom-shape-divider-bottom-1615259255 .shape-fill {
+    fill: #50E3C2;
+}
+
+body {
+    background-color:#DADADA;
+}
+
+a{
+    -o-transition:5s;
+    -ms-transition:5s;
+    -moz-transition:5s;
+    -webkit-transition:5s;
+    text-decoration:none;
+
+}
+
+em
+
+strong{
+    font-style: bold;
+}
+
+img{
+    width:100%;
+}
+h1,h2,h3,h4,h5 {
+    font-family: proxima-nova,sans-serif;
+    font-style:normal;
+}
+
+h3 {
+    text-transform:capitalize;
+    font: size 1.875cm;
+    padding:0 0 1% 0;
+    color#001833
+    font-weight:800;
+}
+
+.Projects {
+    height:300px;
+    padding:2% 0;
+}
+
+.Projects h2 {
+    padding:4% 0;
+}
+
+.text-box {
+    float:left;
+    text-align:left;
+    width:480px;
+    background-color: white;
+    height:100%;
+}
+
+.text-box-content {
+    padding:4% 8%;
+}
+
+text-box-content p {
+    line-height: 1.8;
+    color:616569;
+    letter-spacing: .03em;
+    font-size:1em;
+}
+
+.button {
+    padding:5% 3%;
+    border:3px soild #e0ccc8;
+    letter-spacing:0.2em;
+    text-decoration:none;
+    color:#e0ccc8;
+    text-align:center;
+    display:block;
+    font-weight:600;
+    text-transform:uppercase;
+    margin-top:4%;
+}
+
+.button:hover {
+    color:white
+    background-color:#e0ccc8;
+}
+
+.image-area {
+    width:480px;
+    height:300px;
+    overflow:hidden;
+
+}
+
+.left {
+    float:left;
+}
+
+.right {
+    float:right;
+}
+
+.contact {
+    width:100%;
+    background-color:#DBE8E8;
+    padding:5% 0;
+    margin-top:5%;
+    clear:both;
+}
+
+.contact-content {
+    max-width: 960px;
+    margin:0 auto;
+    text-align:center;
+}
+
+.contact-content h4 {
+    font-size:1.875em;
+    padding:1% 0;
+    color:white
+    font-weight:600;
+    letter-spacing:0.04em;
+}
+
+contact-content a {
+    color:e0ccc8;
+    text-decoration:none;
+}
+
+.image-divder {
+    padding:15% 0;
+    background:blue
+    /*bottom, image */url(Imges/Screen\ Shot\ 2021-03-05\ at\ 10.39.22\ PM.png);
+    background-size: cover;
+    background-position:center top;
+
+}
+
+footer {
+    background-color:#DBE8E8
+    color: black;
+    padding:2% 0;
+    clear:both;
+    height:100px;
+
+}
+
+.footer-content {
+    max-width: 960px;
+    padding:2% 0;
+    margin:0 auto;
+    font-family: proxima-nova,sans-serif;
+    font-style:normal;
+    font-weight: 300;
+    line-height:1.4;
+    color:white;
+    letter-spacing:.03em;
+    font-size:1em;
+
+}
+
+.social {
+    float:right;
+}
+
+.social li {
+    display: inline;
+}
+
+.social li a {
+    color:white;
+    padding:0.2em;
+    font-size:1.8em;
+    font-weight:600;
+}
+
+.social li a:hover {
+    color:#DBE8E8;
+
+}
+
+@media only screen and (max-width:1000px) {
+    .wrapper {
+        padding:0 4%;
+    }
+
+    .Projects {
+        padding:4% 0;
+    
+    }
+
+    .image-area {
+        float:left;
+        width:100%;
+        height:auto;
+    }
+
+    .text-box {
+        width:100%;
+        height:auto;
+    }
+
+    .social li a {
+        font-size:1.4em;
+    }
+
+    .footer-content {
+        padding:3.5%;
+    }
+
+}
+
+@media only screen and (max-width:800px) {
+    .intro h1
+    font-size:4em;
+    line-height: 1.2;
+}
+.intro h2 {
+    font-size:1.8em;
+    padding-top:3%;
+}
+footer {
+    height:130px;
+    line-height:1.3em;
+}
+social {
+    float:left;
+}
+.social li a {
+    font-size:1.3em;
+}
+.contact-content {
+    font-size:12px;
+    line-height: 1.5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
