--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color:#FFFF
+    background-color: #F3ece7
 }
 ul {
 
@@ -69,8 +69,15 @@ style>
 
           }
     }
- 
-.text-conatiner p:nth-child(1){
+}
+.text-conatinter p:nth-child(1){
+    font-family: Arial, Helvetica, sans-serif;
+    color:black;
+    letter-spacing:1px;
+    color:#000000;
+    font-size:30px;
+}
+.text-conatiner p:nth-child(2){
       font-family: Arial, Helvetica, sans-serif;
       font-weight:bold;
       color:#DBE8E8;
@@ -112,7 +119,8 @@ style>
     width: 100%;
     overflow: hidden;
     line-height: 0;
-    color:#DBE8E8
+    background-color: #DBE8E8;
+    color-fill:#DBE8E8
     transform: rotate(180deg);
 }
 
@@ -122,6 +130,8 @@ style>
     width: calc(100% + 1.3px);
     height: 123px;
     color: #50E3C2;
+    background-color: #DBE8E8;
+    color-fill:#DBE8E8
 }
 
 .custom-shape-divider-bottom-1615259255 .shape-fill {
@@ -192,22 +202,21 @@ text-box-content p {
 }
 
 .button {
-    padding:5% 3%;
-    border:3px soild #C0D3CB;
-    letter-spacing:0.2em;
-    text-decoration:none;
-    color:#000000;
-    text-align:center;
-    display:block;
-    font-weight:600;
-    text-transform:uppercase;
-    margin-top:4%;
-}
-
-.button:hover {
-    color:#50E3C2
-    background-color:#C0D3CB
-}
+    padding: 5% 3%;
+    border: 3px solid #C0D3CB;
+    letter-spacing: 0.2em;
+    text-decoration: none;
+    color: #C0D3CB;
+    text-align: center;
+    display: block;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 4%;
+  }
+  .button:hover {
+    color: #fff;
+    background-color: #C0D3CB;
+  }
 
 .image-area {
     width:480px;
@@ -251,13 +260,6 @@ contact-content a {
     text-decoration:none;
 }
 
-.image-divder {
-    padding:15% 0;
-    background:blue
-    /*bottom, image */url(Imges/Screen\ Shot\ 2021-03-05\ at\ 10.39.22\ PM.png);
-    background-size: cover;
-    background-position:center top;
-
 }
 
 footer {
@@ -266,137 +268,44 @@ footer {
     padding:2% 0;
     clear:both;
     height:100px;
-
 }
 
-.footer-content {
-    max-width: 960px;
-    padding:2% 0;
-    margin:0 auto;
-    font-family: proxima-nova,sans-serif;
-    font-style:normal;
-    font-weight: 300;
-    line-height:1.4;
-    color:white;
-    letter-spacing:.03em;
-    font-size:1em;
-
-}
-
-.social {
-    float:right;
-}
-
-.social li {
-    display: inline;
-}
-
-.social li a {
-    color:white;
-    padding:0.2em;
-    font-size:1.8em;
-    font-weight:600;
-}
-
-.social li a:hover {
-    color:#DBE8E8;
-
-}
-
-@media only screen and (max-width:1000px) {
-    .wrapper {
-        padding:0 4%;
-    }
-
-    .Projects {
-        padding:4% 0;
-    
-    }
-
-    .image-area {
-        float:left;
-        width:100%;
-        height:auto;
-    }
-
-    .text-box {
-        width:100%;
-        height:auto;
-    }
-
-    .social li a {
-        font-size:1.4em;
-    }
-
-    .footer-content {
-        padding:3.5%;
-    }
-
-}
-
-@media only screen and (max-width:800px) {
-    .intro h1
-    font-size:4em;
-    line-height: 1.2;
-}
-.intro h2 {
-    font-size:1.8em;
-    padding-top:3%;
-}
 footer {
-    height:130px;
-    line-height:1.3em;
-}
-social {
-    float:left;
-}
-.social li a {
-    font-size:1.3em;
-}
-.contact-content {
-    font-size:12px;
-    line-height: 1.5;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    background-color: #DBE8E8;
+    color: #fff;
+    padding: 2% 0;
+    width: 100%;
+    clear: both;
+    height: 100px;
+  }
+  .footer-content {
+    max-width: 960px;
+    padding: 2% 0;
+    margin: 0 auto;
+    font-family: proxima-nova, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.4;
+    color: #fff;
+    letter-spacing: .03em;
+    font-size: 1em;
+  }
+  .credit {
+    float: left;
+  }
+  .social {
+    float: right;
+  }
+  .social li {
+    display: inline;
+  }
+  .social li a {
+    color: #fff;
+    padding: 0.2em;
+    font-size: 1.8em;
+    font-weight: 600;
+  }
+  .social li a:hover {
+    color: #011833;
+  }
 
