--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
-ody {
-    background-color: #f9f9f9;
-  }
+*{
+  margin: 0;
+  padding: 0;
+}
+
   a {
     -o-transition: .5s;
     -ms-transition: .5s;
@@ -30,13 +32,8 @@ ody {
     font-weight: 800;
   }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body {
-    background-color: #F3ece7
+    background-color: #f5f5f5
 }
 ul {
 
@@ -45,7 +42,7 @@ ul {
 ul li{
     list-style: none;
     display: inline-block;
-    float: right left;
+    float: right;
     Line-height: 100px;
     padding: 0 20px;
 }
@@ -55,7 +52,7 @@ ul li a {
     text-decoration: none;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #000000
+    color: #000000;
     padding: 0 20px;
 
 }
@@ -93,11 +90,13 @@ nav{
   
 
 .hero-image {
-    background: url("Imges/vecteezy_minimal-office-desk-table-with-keyboard-computer-coffee-cup-mouse-white-pen-earphones-lavender-flowers-on-a-green-table-with-copy-space-for-input-your-text-green-color-workplace-composition_1884691.jpg");
+    background-image: linear-gradient( rgba(192,211,203, 1.0), rgba(192, 211, 203, 0.20)), /* bottom, image */
+    url(/Users/editarojas/Documents/coding/UX_UI_Homework_17/Imges/laptop.jpg);
     background-position:  center ;
     background-repeat: no-repeat;
     background-size: cover;
-    height: %;
+    height: 60vh;
+    margin-bottom: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,7 +122,8 @@ text-align: center;
 }
 
 .hero-text p{
-    font-size: 2em;
+  margin-top: 40px;  
+  font-size: 2em;
     text-align: center;
     color: #fff;
     font-weight: 300;
@@ -154,9 +154,9 @@ text-align: center;
 }
 
 .hero-girl {
-    height:80vh;
+    height: 60vh;
     padding: 0%;
-    margin: 4%;
+    margin: 2%;
     animation: drop 1.5s ease;
 }
 
@@ -172,57 +172,158 @@ transform: translateY(-80px);
     transform: translateY(0px);
 }}
 
+.hero-text h2 {
+  margin-bottom: ;
+  font-size: 2em;
+  text-align: center;
+  color: #fff;
+  font-weight: 300;
+  text-transform: capitalize;
+  letter-spacing: 0.09em;
 
-.Projects {
-    height: 300px;
-    padding: 2% 0;
-    
-  }
-  .Projects h3 {
-    padding: 4% 0;
-  }
-  .text-box {
-    float: left;
-    text-align: left;
-    width: 480px;
-    background-color: #fff;
-    height: 100%;
-  }
-  .text-box-content {
-    padding: 4% 8%;
-  }
-  .text-box-content p {
-    line-height: 1.8;
-    color: #616569;
-    letter-spacing: .03em;
-    font-size: 1em;
-  }
-  .button {
-    padding: 5% 3%;
-    border: 3px solid #e0ccc8;
-    letter-spacing: 0.2em;
-    text-decoration: none;
-    color: #e0ccc8;
-    text-align: center;
-    display: block;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-top: 4%;
-  }
-  .button:hover {
-    color: #fff;
-    background-color: #e0ccc8;
-  }
-  .image-area {
-    width: 480px;
-    height: 300px;
-    overflow: hidden;
-  }
-  .left {
-    float: left;
-  }
-  .right {
-    float: right;
   }
   
+.h5 {
+
+  text-align: center;
+  position: absolute;
+  justify-content: center;
+  text-decoration: none;
+
+
+
+}
+
+ 
+.Work {
+  justify-items: center;
+  justify-content: space-evenly;
+  height: 300px;
+  padding: 2% 0;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 15%;
+  margin-right: 15%;
+  border-color: black;
+}
+
+
+.Work h3 {
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 4% 0;
+}
+.text-box {
+  float: left;
+  text-align: left;
+  width: 480px;
+  background-color: #D4E4F8;
+  height: 100%;
+
+}
+.text-box-content {
+  padding: 4% 8%;
+  height: 100%;
+}
+.text-box-content p {
+  line-height: 1.8;
+  color: #616569;
+  letter-spacing: .03em;
+  font-size: 1em;
+}
+.button {
+  padding: 5% 3%;
+  border: 3px solid #C0D3CB;
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  color: #000;
+  text-align: center;
+  display: block;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 4%;
+}
+.button:hover {
+  color: #fff;
+  background-color: #C0D3CB;
+}
+.image-area {
+  width: 480px;
+  height: 300px;
+  overflow: hidden;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+
+
+.contact {
+  width: 100%;
+  background-color: #C0D3CB;
+  padding: 5% 0;
+  margin-top: 5%;
+  clear: both;
+}
+.contact-content {
+  max-width: 960px;
+  margin: 0 auto;
+  text-align: center;
+}
+.contact-content h4 {
+  font-size: 1.875em;
+  padding: 1% 0;
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 0.04em;
+}
+.contact-content a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+footer {
+  background-color: #C0D3CB;
+  color: #fff;
+  padding: 2% 0;
+  width: 100%;
+  clear: both;
+  height: 100px;
+}
+.footer-content {
+  max-width: 960px;
+  padding: 2% 0;
+  margin: 0 auto;
+  font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.4;
+  color: #fff;
+  letter-spacing: .03em;
+  font-size: 1em;
+}
+.credit {
+  float: left;
+}
+.social {
+  float: right;
+}
+.social li {
+  display: inline;
+}
+.social li a {
+  color: #fff;
+  padding: 0.2em;
+  font-size: 1.8em;
+  font-weight: 600;
+}
+.social li a:hover {
+  color: #C0D3CB;
+}
+
+
 
